<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_confirm"
    android:paddingBottom="@dimen/float_dialog_paddingBottom"
    android:paddingTop="@dimen/float_dialog_paddingTop">

    <TextView
        android:id="@+id/txt_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/img_guide"
        android:layout_alignRight="@+id/img_guide"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/float_dialog_txt_guide_textSize" />

    <ImageView
        android:id="@+id/img_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_guide"
        android:background="@drawable/background_round_grey"
        android:contentDescription="@string/blank"
        android:layout_margin="10dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/layout_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2"
        android:layout_alignLeft="@id/img_guide"
        android:layout_alignRight="@id/img_guide"
        android:layout_below="@id/img_guide"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_cancel_selector"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/float_dialog_txt_guide_textSize" />
            />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_confirm_selector"
            android:text="@string/hide"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/float_dialog_txt_guide_textSize" />
            />
    </LinearLayout>

</RelativeLayout>