<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/background_dialog_confirm"
    android:paddingBottom="@dimen/float_dialog_paddingBottom"
    android:paddingTop="@dimen/float_dialog_paddingTop">

    <WebView
        android:id="@+id/confirm_webview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logout_webview"
        android:background="@drawable/transparent" />

    <TextView
        android:id="@+id/txt_message_w"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/img_guide"
        android:layout_alignRight="@+id/img_guide"
        android:layout_below="@id/confirm_webview"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/are_you_sure_exit"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/float_dialog_txt_guide_textSize" />

    <LinearLayout
        android:id="@+id/layout_confirm_w"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/img_guide"
        android:layout_alignRight="@id/img_guide"
        android:layout_below="@id/txt_message_w"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_w"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_cancel_selector"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/float_dialog_txt_guide_textSize" />

        <Button
            android:id="@+id/btn_confirm_w"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_confirm_selector"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/float_dialog_txt_guide_textSize" />
    </LinearLayout>

</RelativeLayout>